# rust-cicd-demo

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  main.yml
src/: main.rs
