[package]
name = "rust-ping-pong"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.6.0"
serde_json = "1.0.140"
tower = "0.5.2"
